@@ -129,7 +129,7 @@ typedef struct CmdLocation {
 
 typedef struct ECL {
     int srcOffset;		/* Command location to find the entry. */
-    int nline;
+    int nline;                  /* Number of words in the command */
     int *line;			/* Line information for all words in the
 				 * command. */
 } ECL;
@@ -141,7 +141,16 @@ typedef struct ExtCmdLoc {
     ECL *loc;			/* Command word locations (lines). */
     int nloc;			/* Number of allocated entries in 'loc'. */
     int nuloc;			/* Number of used entries in 'loc'. */
+    Tcl_HashTable litIndex;     /* HashValue is ExtIndex* */
 } ExtCmdLoc;
+
+typedef struct ExtIndex {
+  int pc;   /* Instruction pointer of a command in ExtCmdLoc.loc[.] */
+  int word; /* Index of word in ExtCmdLoc.loc[cmd]->line[.] */
+} ExtIndex;
+
+EXTERN void TclEnterCmdWordIndex (ExtCmdLoc *eclPtr, Tcl_Obj* obj,
+				  int pc, int word);
 
 /*
  * CompileProcs need the ability to record information during compilation that
